full-moon/tests/roblox_cases/pass/named_function_arg_types/source.lua
type MyCallbackType = (cost: number, name: string) -> string

local cb: (amount: number) -> number
local function foo(cb: (name: string) -> ())
end