full-moon/tests/roblox_cases/fail/parser/param_tuple_types/source.lua
function foo(test: (number, number))
end